--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.6",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "framer-motion": "^6.2.8",
     "next": "12.1.0",
+    "next-themes": "^0.1.1",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "autoprefixer": "^10.4.4",
+    "daisyui": "^2.11.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.0",
     "typescript": "4.6.2"
   }
