--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
-    "next": "12.1.1",
+    "@auth0/nextjs-auth0": "^1.7.0",
+    "next": "12.1.2",
     "next-themes": "^0.1.1",
-    "react": "18.0.0-rc.3",
-    "react-dom": "18.0.0-rc.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
@@ -24,7 +25,7 @@
     "autoprefixer": "^10.4.4",
     "daisyui": "^2.11.0",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1",
+    "eslint-config-next": "12.1.2",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.0",
