--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.2.8",
-    "next": "12.1.2",
+    "next": "^12.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1"
@@ -24,8 +24,8 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.2",
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.1.2",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.0",
     "typescript": "4.6.3"
