--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
+    "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "eslint": "^8.12.0",
     "eslint-config-next": "^12.1.2",
