--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
-    "next": "12.1.0",
+    "next": "12.1.4",
     "next-themes": "^0.1.1",
-    "react": "18.0.0-rc.0",
-    "react-dom": "18.0.0-rc.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
