--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
+    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
+    "tsn": "ts-node -r tsconfig-paths/register -O '{\"module\": \"commonjs\"}'",
+    "db:migrate": "yarn tsn src/db/migration.ts"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
@@ -15,7 +17,9 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.2.8",
+    "kysely": "^0.17.1",
     "next": "12.1.5-canary.4",
+    "pg": "^8.7.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1"
@@ -24,10 +28,12 @@
     "@types/node": "17.0.23",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.12.0",
     "eslint-config-next": "^12.1.2",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.0",
+    "ts-node": "^10.7.0",
     "typescript": "4.6.3"
   }
 }
