--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
     "tsn": "ts-node -r tsconfig-paths/register -O '{\"module\": \"commonjs\"}'",
-    "db:migrate": "yarn tsn src/db/migration.ts"
+    "db:migrate": "yarn tsn src/db/migration.ts",
+    "db:seed": "yarn tsn src/db/seed.ts"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
@@ -28,6 +29,7 @@
     "@types/node": "17.0.23",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "csv-parse": "^5.0.4",
     "dotenv": "^16.0.0",
     "eslint": "^8.12.0",
     "eslint-config-next": "^12.1.2",
