--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "pg": "^8.7.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "use-debounce": "^7.0.1",
+    "zod": "^3.14.4"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
