--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.2.8",
     "kysely": "^0.17.1",
-    "next": "12.1.5-canary.4",
+    "next": "12.1.0",
     "pg": "^8.7.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "18.0.0-rc.0",
+    "react-dom": "18.0.0-rc.0",
     "react-icons": "^4.3.1",
     "use-debounce": "^7.0.1",
     "zod": "^3.14.4"
