--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
     "tsn": "ts-node -r tsconfig-paths/register -O '{\"module\": \"commonjs\"}'",
     "db:migrate": "yarn tsn src/db/migration.ts",
-    "db:seed": "yarn tsn src/db/seed.ts"
+    "db:seed": "yarn tsn src/db/seed.ts",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
@@ -19,6 +21,7 @@
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.2.8",
     "kysely": "^0.17.1",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "pg": "^8.7.3",
     "react": "18.0.0-rc.0",
@@ -31,6 +34,7 @@
     "@types/node": "17.0.23",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "c8": "^7.11.0",
     "csv-parse": "^5.0.4",
     "dotenv": "^16.0.0",
     "eslint": "^8.12.0",
@@ -38,6 +42,7 @@
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.0",
     "ts-node": "^10.7.0",
-    "typescript": "4.6.3"
+    "typescript": "4.6.3",
+    "vitest": "^0.9.3"
   }
 }
