--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "framer-motion": "^6.2.8",
     "kysely": "^0.17.1",
     "lodash": "^4.17.21",
-    "next": "12.1.0",
+    "next": "12.1.5",
     "pg": "^8.7.3",
-    "react": "18.0.0-rc.0",
-    "react-dom": "18.0.0-rc.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "use-debounce": "^7.0.1",
     "zod": "^3.14.4"
