--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "framer-motion": "^6.2.8",
     "kysely": "^0.17.1",
     "lodash": "^4.17.21",
-    "next": "12.1.6-canary.1",
+    "next": "12.1.0",
     "pg": "^8.7.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "18.0.0-rc.0",
+    "react-dom": "18.0.0-rc.0",
     "react-icons": "^4.3.1",
     "use-debounce": "^7.0.1",
     "zod": "^3.14.4"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
-    "@types/react": "^18.0.0",
+    "@types/react": "17.0.44",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "c8": "^7.11.0",
     "csv-parse": "^5.0.4",
