--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0",
     "react-icons": "^4.3.1",
+    "react-virtuoso": "^2.9.2",
     "use-debounce": "^7.0.1",
     "zod": "^3.14.4"
   },
