--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./",
-    "types": ["vitest/globals"]
+    "types": ["vitest/globals", "react/next"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
