--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "17.0.23",
-    "@types/react": "17.0.44",
+    "@types/react": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "c8": "^7.11.0",
     "csv-parse": "^5.0.4",
