--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.2.8",
+    "jotai": "^1.6.4",
     "kysely": "^0.17.1",
     "lodash": "^4.17.21",
     "next": "12.1.0",
@@ -29,6 +30,7 @@
     "react-dom": "18.0.0-rc.0",
     "react-icons": "^4.3.1",
     "react-virtuoso": "^2.9.2",
+    "type-fest": "^2.12.2",
     "use-debounce": "^7.0.1",
     "zod": "^3.14.4"
   },
