--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
     "framer-motion": "^6.2.8",
-    "jotai": "^1.6.4",
     "kysely": "^0.17.1",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "pg": "^8.7.3",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-virtuoso": "^2.9.2",
     "type-fest": "^2.12.2",
