--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.0.0-rc.0",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
+    "react-use": "^17.3.2",
     "react-virtuoso": "^2.9.2",
     "type-fest": "^2.12.2",
     "use-debounce": "^7.0.1",
