--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "csv-parse": "^5.0.4",
     "dotenv": "^16.0.0",
     "eslint": "^8.12.0",
-    "eslint-config-next": "^12.1.2",
+    "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.0",
     "ts-node": "^10.7.0",
